# lekiwi_nomad_pi

./: super_client_configuration_file.xml
install/: local_setup.sh  setup.sh
install/lekiwi_control/lib/lekiwi_control/: cmd_vel_publisher
install/lekiwi_control/share/lekiwi_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lekiwi_servo/lib/lekiwi_servo/: servo_controller  servo_teleop
install/lekiwi_servo/share/lekiwi_servo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/lekiwi_camera/: package.xml  setup.cfg  setup.py
src/lekiwi_camera/lekiwi_camera/: camera_node.py  check.py  node.py
src/lekiwi_control/: package.xml  setup.cfg  setup.py
src/lekiwi_controller_cmd/: package.xml  setup.cfg  setup.py
src/lekiwi_controller_cmd/launch/: camera.launch.py  lekiwi_complete.launch.py  run_servo.launch.py
src/lekiwi_controller_cmd/lekiwi_controller_cmd/: keybroad.py  listen_controller.py  servo.py  servo.py.bak
src/lekiwi_odom/: README.md  package.xml  setup.cfg  setup.py
src/lekiwi_odom/launch/: odom_launch.py
src/lekiwi_odom/lekiwi_odom/: odom_node.py
src/lekiwi_servo/: package.xml  setup.cfg  setup.py
src/lekiwi_servo/lekiwi_servo/: servo_controller.py  servo_teleop.py
