<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lekiwi_servo</name>
  <version>0.0.0</version>
  <description>ROS2 package for controlling Feetech servos</description>
  <maintainer email="acy@todo.todo">acy</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>feetech-servo-sdk</depend>
  <depend>scservo_sdk</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
